{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 79,
  "lineage": "23b87ed6-adeb-33aa-0cba-244aef2a4f9a",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bafe3c6825848472",
            "arn": "arn:aws:ec2:us-east-1:471112634889:elastic-ip/eipalloc-0bafe3c6825848472",
            "domain": "vpc",
            "id": "eipalloc-0bafe3c6825848472",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-216-99-94.compute-1.amazonaws.com",
            "public_ip": "44.216.99.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-nat-eip-0",
              "Project": "raft-coordinator"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-nat-eip-0",
              "Project": "raft-coordinator"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:internet-gateway/igw-0d7ce3db1b826bca8",
            "id": "igw-0d7ce3db1b826bca8",
            "owner_id": "471112634889",
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-igw",
              "Project": "raft-coordinator"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-igw",
              "Project": "raft-coordinator"
            },
            "vpc_id": "vpc-0cc4741094e0c253e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "coordinator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:security-group/sg-0b476971e59855295",
            "description": "Raft coordinator nodes - gRPC peer traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b476971e59855295",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "HTTP from VPC (heartbeat, state, snapshot)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "gRPC from other coordinators",
                "from_port": 50051,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 50051
              }
            ],
            "name": "raft-coordinator-experiment-coordinator-sg",
            "name_prefix": "",
            "owner_id": "471112634889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-coordinator-sg",
              "Project": "raft-coordinator"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-coordinator-sg",
              "Project": "raft-coordinator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc4741094e0c253e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:security-group/sg-0a8a61bf75e93dc0c",
            "description": "Task Ingest API - HTTP inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8a61bf75e93dc0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "raft-coordinator-experiment-ingest-sg",
            "name_prefix": "",
            "owner_id": "471112634889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-ingest-sg",
              "Project": "raft-coordinator"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-ingest-sg",
              "Project": "raft-coordinator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc4741094e0c253e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "observer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:security-group/sg-0546c9cd6e4cb7842",
            "description": "State Observer - Prometheus + outbound to coordinators",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0546c9cd6e4cb7842",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "Prometheus scrape",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "raft-coordinator-experiment-observer-sg",
            "name_prefix": "",
            "owner_id": "471112634889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-observer-sg",
              "Project": "raft-coordinator"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-observer-sg",
              "Project": "raft-coordinator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc4741094e0c253e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:security-group/sg-000d5dc25f73ca804",
            "description": "Worker nodes - outbound only (polls SQS, heartbeats to coordinator)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000d5dc25f73ca804",
            "ingress": [],
            "name": "raft-coordinator-experiment-worker-sg",
            "name_prefix": "",
            "owner_id": "471112634889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-worker-sg",
              "Project": "raft-coordinator"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-worker-sg",
              "Project": "raft-coordinator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc4741094e0c253e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:subnet/subnet-0500cf324cd179ba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0500cf324cd179ba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112634889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-private-us-east-1a",
              "Project": "raft-coordinator",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-private-us-east-1a",
              "Project": "raft-coordinator",
              "Tier": "private"
            },
            "vpc_id": "vpc-0cc4741094e0c253e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:subnet/subnet-0bbc36e7608f8d262",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbc36e7608f8d262",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112634889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-public-us-east-1a",
              "Project": "raft-coordinator",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-public-us-east-1a",
              "Project": "raft-coordinator",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cc4741094e0c253e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:vpc/vpc-0cc4741094e0c253e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0cbe11e8a0fbbff45",
            "default_route_table_id": "rtb-05e7885d495014f5d",
            "default_security_group_id": "sg-0466b6fb3fd7fb710",
            "dhcp_options_id": "dopt-03a408e4844a76d8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc4741094e0c253e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e7885d495014f5d",
            "owner_id": "471112634889",
            "tags": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-vpc",
              "Project": "raft-coordinator"
            },
            "tags_all": {
              "Environment": "experiment",
              "ManagedBy": "terraform",
              "Name": "raft-coordinator-experiment-vpc",
              "Project": "raft-coordinator"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}